[gd_scene load_steps=7 format=2]

[ext_resource path="res://levels/ui/teams.gd" type="Script" id=1]
[ext_resource path="res://fonts/start.tres" type="DynamicFont" id=2]
[ext_resource path="res://levels/bottomhud.tscn" type="PackedScene" id=3]
[ext_resource path="res://backgounds/night-sky-at-ceres.jpg" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.8, 0, 1 )

[node name="Teams" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Night Sky" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 4 )

[node name="Bottomhud" parent="." instance=ExtResource( 3 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 64.0
margin_top = 46.0
margin_right = 1100.0
margin_bottom = 674.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1036.0
margin_bottom = 512.0
rect_min_size = Vector2( 1024, 512 )

[node name="1" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 512.0
rect_min_size = Vector2( 256, 0 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )

[node name="2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 260.0
margin_right = 516.0
margin_bottom = 512.0
rect_min_size = Vector2( 256, 0 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 2 )

[node name="3" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 520.0
margin_right = 776.0
margin_bottom = 512.0
rect_min_size = Vector2( 256, 0 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 2 )

[node name="4" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 780.0
margin_right = 1036.0
margin_bottom = 512.0
rect_min_size = Vector2( 256, 0 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 2 )

[node name="Return" type="Button" parent="VBoxContainer"]
margin_top = 516.0
margin_right = 1036.0
margin_bottom = 570.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "BUTTON_RETURN"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_Return_pressed"]
